@@ -98,6 +98,7 @@ test : test-compile 01 02 03 04 05 06 07 08 09 10 11 12 13 14
 	./03-publish-qos1-no-subscribers-v5.py
 	./03-publish-qos1-retain-disabled.py
 	./03-publish-qos1.py
+	./03-publish-qos2-max-inflight-exceeded.py
 	./03-publish-qos2-max-inflight.py
 	./03-publish-qos2.py
 
